# SimpleFileWatcher

./: .gitignore  CMakeLists.txt  ReadMe.md
source/: FileWatcherLinux.cpp  FileWatcherOSX.cpp  FileWatcherWin32.cpp
source/demo/: SimpleDemo.cpp
